# Agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
core/: __init__.py  agent.py  config.py
core/execution/: __init__.py  action_executor.py  actions.py
core/llm/: __init__.py  client.py
core/memory/: __init__.py  trajectory.py
core/perception/: __init__.py  vision_model.py
core/planning/: __init__.py  planner.py
examples/: demo_gradio.py  demo_search.py
grounding_model_demo/: chat_function.py  config.py  config.yaml.bak  grounding_model_test.py
